--- a/static/style_geo.css
+++ b/static/style_geo.css
@@ -19,8 +19,8 @@ body {
     max-width: 100%;
     justify-self: center;
     color: white;
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    padding: 0 auto;
     overflow: visible;
 }
 
